simplified toString, corrected services + minor changes